src/objects/Financing_Information__c.object
<CustomObject>
    <description>Financing Information</description>
    <fields>
        <fullName>Amount_Charged__c</fullName>
        <label>Amount Charged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Amount__c</fullName>
        <label>Application Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Amount__c</fullName>
        <label>Approval Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult__c</fullName>
        <label>Consult</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financing Information</relationshipLabel>
        <relationshipName>Financing_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending_Amount__c</fullName>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Docs</fullName>
                </value>
                <value>
                    <fullName>Documents Faxed</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financing Information</label>
    <nameField>
        <displayFormat>Finance-{00000}</displayFormat>
        <label>Financing Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing Information</pluralLabel>
    <recordTypes>
        <fullName>Care_Credit</fullName>
        <active>true</active>
        <description>Care Credit</description>
        <label>Care Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chase</fullName>
        <active>true</active>
        <description>Chase</description>
        <label>Chase</label>
    </recordTypes>
    <recordTypes>
        <fullName>MedChoice</fullName>
        <active>true</active>
        <description>MedChoice</description>
        <label>MedChoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spring_Stone</fullName>
        <active>true</active>
        <description>Spring Stone</description>
        <label>Spring Stone</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>